@@ -20,6 +20,9 @@ Bug fixed in 1.8.2a:
   - Fix a potential (but unlikely) race condition in parallel elisp
     builds.  (Introduced in 1.7.3.)
 
+  - Do not assume that users override _DEPENDENCIES in all conditions
+    where Automake will try to define them.
+
 * New sections in manual:
 
   - Third-Party Makefiles: how to interface third party Makefiles.
