@@ -1,5 +1,13 @@
 2004-02-01  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/Automake/Variable.pm (transform_variable_recursively):
+	Define rewritten variables in all conditions not *covered* by user
+	definitions, not simply in conditions without a previous
+	definition.
+	* tests/cond34.test: New file.
+	* tests/Makefile.am (TESTS): Add cond34.test.
+	Report from Elena A. Vengerova.
+
 	* doc/automake.texi (Multiple Outputs): Typo.
 
 	* doc/automake.texi (Emacs Lisp): Typos.
